syntax = "proto3";

package discount;


// SERVICE
service DiscountService {
  // Admin side
  rpc CreateDiscount(CreateDiscountRequest) returns (Discount);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (Discount);
  rpc GetDiscount(GetDiscountRequest) returns (Discount);
  rpc ListDiscounts(ListDiscountsRequest) returns (ListDiscountsResponse);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (Empty);

  // User side
  rpc AssignDiscountToUser(AssignDiscountToUserRequest) returns (DiscountUser);
  rpc ListUserDiscounts(ListUserDiscountsRequest) returns (ListUserDiscountsResponse);
}

// ENUMS
enum DiscountType {
  PERCENTAGE = 0;
  AMOUNT = 1;
}

enum DiscountMovieStatus {
  ACTIVE = 0;
  INACTIVE = 1;
}

enum DiscountUserStatus {
  PENDING = 0;
  APPROVED = 1;
  REJECTED = 2;
}

// MESSAGES
message Discount {
  string id = 1;
  optional string discount_name = 2;
  optional string discount_description = 3;
  optional string discount_code = 4;
  optional int32 discount_value = 5;
  optional DiscountType discount_type = 6;
  optional string discount_start_date = 7;
  optional string discount_end_date = 8;
  optional int32 discount_max_uses = 9;
  optional int32 discount_min_booking_amount = 10;
  optional int32 discount_used_count = 11;
  optional bool discount_is_active = 12;
  string created_at = 13;
  string updated_at = 14;
  repeated string movie_ids = 15; 
}

message DiscountUser {
  string id = 1;
  string discount_id = 2;
  string user_id = 3;
  DiscountUserStatus status = 4;
  string created_at = 5;
  string updated_at = 6;
}

// REQUESTS / RESPONSES
message CreateDiscountRequest {
  Discount discount = 1;
}

message UpdateDiscountRequest {
  Discount discount = 1;
}

message GetDiscountRequest {
  string id = 1;
}

message ListDiscountsRequest {}

message ListDiscountsResponse {
  repeated Discount discounts = 1;
}

message DeleteDiscountRequest {
  string id = 1;
}

message AssignDiscountToUserRequest {
  string discount_id = 1;
  string user_id = 2;
}

message ListUserDiscountsRequest {
  string user_id = 1;
}

message ListUserDiscountsResponse {
  repeated Discount discounts = 1;
}

message Empty {}



